# PredictiveSurveillanceRisk

./: .gitignore  PublicationGrade_TODO.md  README.md  pyproject.toml
data/: source_of_truth.json
data/raw/: atlanta_cameras.geojson  charlotte_cameras.geojson  lehigh_valley_cameras.geojson  maine_cameras.geojson  memphis_cameras.geojson  richmond_cameras.geojson
results/robustness/: camera_removal_analysis.csv  mobility_sensitivity_analysis.csv  reidentification_sensitivity.csv  road_network_robustness.json  robustness_summary.json  weighting_comparison.csv
results/traffic_weighted/: 5K_METRICS.json  comparison_report.md
results/traffic_weighted/weights/: atlanta_metadata.json  charlotte_metadata.json  charlotte_node_traffic.pkl  lehigh_valley_edge_traffic.pkl  lehigh_valley_metadata.json  lehigh_valley_node_traffic.pkl  maine_metadata.json  maine_node_traffic.pkl  (+5 more)
scripts/: benchmark_cuda_camera_query.py  benchmark_gpu_spike.py  benchmark_perf_rewrite.py  build_publication_boundaries.py  build_source_of_truth.py  check_data_freshness.py  download_aadt_data.py  generate_metro_camera_geojson.py  road_network_simulation.py  robustness_analysis.py  run_gpu_spike_stability.ps1  run_metro_batch.py  run_roi_analysis.py  run_traffic_weighted_simulation.py  run_us32_unattended.ps1  validate_cuda_camera_query.py  validate_gpu_backend.py  weekend_run.ps1
src/: __init__.py  analysis.py  data.py  network.py  prediction.py  simulation.py  traffic_weights.py
tests/: __init__.py  test_data.py  test_network.py  test_prediction.py  test_simulation.py  test_traffic_weights.py
