[project]
name = "alpr-mobility"
version = "0.1.0"
description = "Research framework to model predictive surveillance capabilities of ALPR camera networks"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "geopandas",
    "osmnx",
    "networkx",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyter",
    "h3",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
